--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "remark-html": "^15.0.2"
   },
   "devDependencies": {
+    "@types/node": "^18.13.0",
+    "@types/react": "^18.0.28",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
     "sass": "^1.58.0",
-    "tailwindcss": "^3.2.6"
+    "tailwindcss": "^3.2.6",
+    "typescript": "^4.9.5"
   }
 }
